experiment_output/error_log/nondex-Putnami-putnami-gradle-plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task887/wd/NonDex-plugin-test/github.com/Putnami/putnami-gradle-plugin/src/main/java/fr/putnami/gwt/gradle/task/GwtCompileTask.java:124: error: cannot find symbol
		sources.add(project.files(mainSourceSet.getOutput().getResourcesDir()))
		       ^
  symbol:   method add(ConfigurableFileCollection)
  location: variable sources of type FileCollection
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 19s
